# traffic-heir-prototype

./: README.md  pyproject.toml
configs/experiment/: prototype_default.json
configs/sumo/: correlated_adjacency.json  corridor.yaml  grid_3x3.yaml  large_adjacency.json  sample_adjacency.json  two_intersections.yaml
reports/: action4_metrics.json  heir_export_report.json  heir_overhead_report.json  heir_overhead_report.md  key_numbers.json  key_numbers.md  latex_tables.md  latex_tables.tex  paper_results_table.md  prototype_default_metrics.json  results_narrative.md  seed_sweep_metrics.json  seed_sweep_table.md  summary_report.json  summary_report.md  sumo_binary_metrics.json  sumo_correlated_metrics.json  sumo_large_metrics.json
scripts/: action_space_demo.py  build_heir_overhead_report.py  build_heir_report.py  build_key_numbers.py  build_latex_tables.py  build_paper_tables.py  build_results_narrative.py  build_summary_report.py  check_export_consistency.py  expand_sample_sumo.py  export_heir_stub.py  generate_sumo_correlated.py  generate_sumo_large.py  prepare_sumo_csv.py  run_action4_experiment.py  run_paper_artifacts.py  run_prototype.py  run_seed_sweep.py  run_sumo_correlated_experiment.py  run_sumo_experiment.py  run_sumo_experiment_large_sample.sh  run_sumo_large_experiment.py  run_with_config.py  smoke_test.py  sumo_scaffold.py  validate_reports.py
src/traffic_heir/: __init__.py  action_space.py  baselines.py  config.py  config_io.py  evaluate.py  fusion.py  heir_consistency.py  heir_export.py  heir_overhead.py  labels.py  stats.py  (+11 more)
tests/: test_project.py
(+4 files in other folders)
